# ProofSnap

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  app.json  docker-compose.yml  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
app/: _layout.tsx  index.tsx  settings.tsx  upgrade.tsx
app/pdf/: [reportId].tsx
app/photos/: [id].tsx
app/reports/: [id].tsx  new.tsx
apps/admin/: index.html  package.json  (+2 more)
backend/: .env.example  README.md  package-lock.json  package.json  serverless.yml  tsconfig.json
docs/: ARCHITECTURE.md  BACKUP_DESIGN.md  CODEX_TASKS.md  DATA_MODEL.md  DATA_SOURCES.md  DISCLAIMER.md  EXTRA_APP_IDEAS.md  LAUNCH_PLAN.md  MVP_SPEC.md  PRODUCT_BRIEF.md  QA_CHECKLIST.md  SCORING.md
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/app/: config.py  main.py
services/api/app/clients/: base.py  coops_client.py  fdoh_client.py  fwc_client.py  ndbc_client.py  nws_client.py
services/api/app/jobs/: import_fwc.py  seed.py  worker.py
services/api/app/models/: entities.py
services/api/app/routers/: admin.py  auth.py  chat.py  health.py  profile.py  ramps.py  regions.py  source_debug.py
services/api/app/schemas/: admin.py  auth.py  chat.py  common.py  profile.py  ramp.py
services/api/app/scoring/: launch_score.py
services/api/app/security/: deps.py  jwt.py
services/api/app/services/: async_utils.py  auth_service.py  chat_recommendation_service.py  importers.py  openai_service.py  ramp_service.py  source_sync.py  station_linking.py
services/api/app/utils/: units.py
services/api/tests/: conftest.py  test_api_smoke.py  test_chat_recommendations.py  test_coops_fdoh_clients.py  test_importers_and_parsers.py  test_limits_and_admin.py  test_openai_service.py  test_scoring.py  test_units.py
services/api/tests/fixtures/: coops_predictions.json  fwc_ramps.geojson  ndbc_41002.spec  ndbc_41002.txt  nws_alerts.json  nws_grid.json
(+90 files in other folders)
